--- a/public/test-css.html
+++ b/public/test-css.html
@@ -36,7 +36,7 @@
     </div>
     <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
-      {{{ body }}} 
+      <!-- {{{ body }}} -->
     </main>
     <footer>
       
