--- a/public/test-css.html
+++ b/public/test-css.html
@@ -1,52 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>My Workout Tracker</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Workout Tracker</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
-</head>
+		<link rel="stylesheet" href="./css/normalize.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+		/>
+		<link rel="stylesheet" href="./css/style.css" />
+	</head>
 
-<body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <span role="img" aria-label="weights">💸</span>
-        <a href="/">My Workout Tracker</a>
-      </h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
-        <!-- {{#if logged_in}} -->
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        <!-- {{else}} -->
-        <a href="/login">login</a>
-        <!-- {{/if}} -->
-      </nav>
-    </header>
-    <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-    <main class="container container-fluid mt-5">
-      <!-- Render the sub layout -->
-      <!-- {{{ body }}} -->
-    </main>
-    <footer>
-      
-    </footer>
-  </div>
+	<body>
+		<div class="container-fluid sticky-top">
+			<div class="row align-items-center bg-dark">
+				<div class="col-sm-12 col-md-8 text-center">
+					<h1><a href="/" class="link-light">My Workout Tracker</a></h1>
+				</div>
+				<div class="col-sm-12 col-md-4 text-center custom-nav">
+					<!-- Conditionally render login or logout links -->
+					<!-- {{#if logged_in}} {{else}} -->
+					-->
+					<a href="/login" class="link-light login-link">login</a>
+					<a href="/profile" class="link-light">profile</a>
+					<!--  | {{/if}} -->
+				</div>
+			</div>
+		</div>
 
-  <!-- Render script for logged in users only -->
-  <!-- {{#if logged_in}} -->
-  <script src="/js/logout.js"></script>
-  <!-- {{/if}} -->
-</body>
+		<div class="card" style="width: 18rem">
+			<img src="..." class="card-img-top" alt="..." />
+			<div class="card-body">
+				<h5 class="card-title">Card title</h5>
+				<p class="card-text">
+					Some quick example text to build on the card title and make up the bulk of
+					the card's content.
+				</p>
+				<a href="#" class="btn btn-primary">Go somewhere</a>
+			</div>
+		</div>
+		<main class="container container-fluid mt-5">
+			<!-- Render the sub layout -->
+			<!-- {{{ body }}} -->
+		</main>
+		<footer></footer>
 
+		<!-- Render script for logged in users only -->
+		<!-- {{#if logged_in}} -->
+		<script src="/js/logout.js"></script>
+		<!-- {{/if}} -->
+
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
