--- a/public/test-css.html
+++ b/public/test-css.html
@@ -15,7 +15,7 @@
 
 	<body>
 		<div class="container-fluid sticky-top">
-			<div class="row align-items-center bg-dark">
+			<div class="row align-items-center bg-dark pt-4 pb-2 mb-5">
 				<div class="col-sm-12 col-md-8 text-center">
 					<h1><a href="/" class="link-light">My Workout Tracker</a></h1>
 				</div>
@@ -30,17 +30,59 @@
 			</div>
 		</div>
 
-		<div class="card" style="width: 18rem">
-			<img src="..." class="card-img-top" alt="..." />
-			<div class="card-body">
-				<h5 class="card-title">Card title</h5>
-				<p class="card-text">
-					Some quick example text to build on the card title and make up the bulk of
-					the card's content.
-				</p>
-				<a href="#" class="btn btn-primary">Go somewhere</a>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-12 col-md-6 col-lg-4 pb-5">
+					<div class="card card-custom">
+						<div class="card-body">
+							<h5 class="card-title">Card title</h5>
+							<p class="card-text">
+								Some quick example text to build on the card title and make up the bulk
+								of the card's content.
+							</p>
+							<a href="#" class="btn btn-dark">Go somewhere</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4 pb-5">
+					<div class="card card-custom">
+						<div class="card-body">
+							<h5 class="card-title">Card title</h5>
+							<p class="card-text">
+								Some quick example text to build on the card title and make up the bulk
+								of the card's content.
+							</p>
+							<a href="#" class="btn btn-dark">Go somewhere</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4 pb-5">
+					<div class="card card-custom">
+						<div class="card-body">
+							<h5 class="card-title">Card title</h5>
+							<p class="card-text">
+								Some quick example text to build on the card title and make up the bulk
+								of the card's content.
+							</p>
+							<a href="#" class="btn btn-dark">Go somewhere</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4 pb-5">
+					<div class="card card-custom">
+						<div class="card-body">
+							<h5 class="card-title">Card title</h5>
+							<p class="card-text">
+								Some quick example text to build on the card title and make up the bulk
+								of the card's content.
+							</p>
+							<a href="#" class="btn btn-dark">Go somewhere</a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
+
 		<main class="container container-fluid mt-5">
 			<!-- Render the sub layout -->
 			<!-- {{{ body }}} -->
