testing some more card stylings

--- a/public/test-css.html
+++ b/public/test-css.html
@@ -35,11 +35,15 @@
 				<div class="col-sm-12 col-md-6 col-lg-4 pb-5">
 					<div class="card card-custom">
 						<div class="card-body">
-							<h5 class="card-title">Card title</h5>
-							<p class="card-text">
-								Some quick example text to build on the card title and make up the bulk
-								of the card's content.
-							</p>
+							<h5 class="card-title">Login</h5>
+							<br />
+							<input type="text" placeholder="Email" id="input-email" / >
+							<br /><br />
+							<input
+								type="text"
+								placeholder="Password"
+								id="input-password"
+							/><br /><br />
 							<a href="#" class="btn btn-dark">Go somewhere</a>
 						</div>
 					</div>
